--- a/FrontEnd/one-solution/src/index.css
+++ b/FrontEnd/one-solution/src/index.css
@@ -1,3 +1,8 @@
+html, body {
+  height: calc(100% - 10vh);
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
