--- a/FrontEnd/one-solution/src/Components/Header/Header.css
+++ b/FrontEnd/one-solution/src/Components/Header/Header.css
@@ -7,9 +7,9 @@
     min-height: 10vh;
     width: 100vw;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: left;
-    justify-content: center;
+    justify-content: space-between;
     font-size: calc(10px + 2vmin);
     color: white;
     z-index: 100;
@@ -25,4 +25,20 @@
 
 .logo-image {
     height: 60px;
+}
+
+.User-profile {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-image {
+    height: 20px;
+    margin-right: 10px;
+}
+
+.Avatar-photo {
+    margin-right: 15px;
 }
