Cabeçalhos adicionados às páginas iniciais

--- a/FrontEnd/one-solution/src/Components/Header/Header.css
+++ b/FrontEnd/one-solution/src/Components/Header/Header.css
@@ -42,3 +42,15 @@
 .Avatar-photo {
     margin-right: 15px;
 }
+
+.icon-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-text {
+    color: white;
+    font-size: 12px;
+}
