Render condicional para lista de células com botão para tela de informações da primeira célula.

--- a/FrontEnd/one-solution/src/Components/TicketCell/TicketCells.css
+++ b/FrontEnd/one-solution/src/Components/TicketCell/TicketCells.css
@@ -8,6 +8,11 @@
     width: 95%;
 }
 
+.cell-render-wrapper {
+    width: 100%;
+    text-decoration: none;
+}
+
 .inside-box {
     display: flex;
     flex-direction: row;
